# optiprofiler-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
docs/: ARCHITECTURE.md  HERMES_INSPIRED.md  ROADMAP.md  TASKS.md  llm-wiki-design.md
op_test/: _scratch.py  fixed_script.py
optiprofiler_agent/: __init__.py  cli.py  config.py  onboarding.py  unified_agent.py
optiprofiler_agent/advisor/: __init__.py  advisor.py
optiprofiler_agent/agent_a/: advisor.py
optiprofiler_agent/agent_b/: debugger.py  local_runner.py
optiprofiler_agent/agent_c/: anomaly_detector.py  interpreter.py  profile_reader.py  renderer.py  report_validator.py  result_loader.py  score_analyzer.py  summary.py
optiprofiler_agent/common/: input_loop.py  interface_adapter.py  knowledge_base.py  llm_client.py  quiet_ml.py  rag.py  text_clean.py
optiprofiler_agent/debugger/: __init__.py  debugger.py  error_classifier.py
optiprofiler_agent/formatters/: input_parser.py  output_formatter.py
optiprofiler_agent/interpreter/: __init__.py  anomaly_detector.py  interpreter.py  profile_reader.py  renderer.py  report_schema.py  report_validator.py  score_analyzer.py  summary.py
optiprofiler_agent/knowledge/: SCHEMA.md
optiprofiler_agent/runtime/: __init__.py  bootstrap.py  memory.py  paths.py  plugin.py  session_log.py  trajectory.py  wiki_local.py
scripts/: chat.py  check_prose.py  extract_knowledge.py  run_eval.py  test_llm_connection.py
tests/: test_cli.py  test_cli_first_run.py  test_config.py  test_config_env_precedence.py  test_debugger.py  test_error_classifier.py  test_input_loop.py  test_interpreter.py  test_knowledge_base.py  test_lint_loop.py  test_llm_client_compat.py  test_local_runner.py  test_onboarding.py  test_quiet_ml.py  test_rag.py  test_report_renderer.py  test_report_schema.py  test_report_validator.py  test_result_loader.py  test_runtime.py  test_unified_agent.py  test_validators.py  test_web_search.py
tests/eval_cases/: factual.json  (+3 more)
tmp/: err.txt
(+69 files in other folders)
